springboot-ocp-bootstrap/src/main/fabric8/service.yml
---
apiVersion: v1
kind: Service
# This gets added by fabric8
#metadata:
#  labels:
#    expose: "true"
#    app: springboot-ocp-bootstrap
#    group: com.redhat
#  name: springboot-ocp-bootstrap
#spec:
#  ports:
#  - name: http
#    port: 8090
#    protocol: TCP
#    targetPort: 8090
#  selector:
#    app: springboot-ocp-bootstrap
