springboot-ocp-bootstrap/src/main/fabric8/route.yml
kind: Route
apiVersion: route.openshift.io/v1
# Can do the bellow from fabric8
#metadata:
#  name: springboot-ocp-bootstrap
#  labels:
#    app: springboot-ocp-bootstrap
#    expose: 'true'
#    group: com.redhat
spec:
  # The host can be auto populated if wanted
  host: springboot-ocp-bootstrap-rabbitmq.apps.labs-aws-430c.sandbox1287.opentlc.com
  to:
    kind: Service
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
